force-app/main/default/objects/Lottery_Application__c/fields/Load_Source__c.field-meta.xml
<CustomField>
    <fullName>Load_Source__c</fullName>
    <label>Load Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUTO</fullName>
                <label>Year End Load</label>
            </value>
            <value>
                <fullName>GRANDFATHER</fullName>
                <label>Grandfather Load</label>
            </value>
            <value>
                <fullName>HISTORICAL</fullName>
                <label>Historical Load</label>
            </value>
            <value>
                <fullName>MANUAL</fullName>
                <label>Manual Override</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>