force-app/main/default/objects/Lottery_Application__c/fields/Points_Detail__c.field-meta.xml
<CustomField>
    <fullName>Points_Detail__c</fullName>
    <label>Points Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>