force-app/main/default/objects/Lottery_Application__c/fields/Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>Request_Notes__c</fullName>
    <label>Request Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>