force-app/main/default/objects/Lottery_Application__c/fields/Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Request_Reason__c</fullName>
    <inlineHelpText>Gift Credit Adjustment Needed
Change Default Level (Extend Gift Credit - e.g., 10 years of Gold instead of 2 years of Premier)
Exception Request (giving requirements not met)
Discounted App (recurring payments toward RecSoc membership)
Other</inlineHelpText>
    <label>Request Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gift Credit Adjustment Needed</fullName>
            </value>
            <value>
                <fullName>Change Default Level</fullName>
            </value>
            <value>
                <fullName>Exception Request</fullName>
            </value>
            <value>
                <fullName>Discounted App</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>