force-app/main/default/objects/Lottery_Application__c/fields/Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Review_Comments__c</fullName>
    <label>Review Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>