force-app/main/default/objects/Lottery_Application__c/fields/Rollover_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rollover_Amount__c</fullName>
    <label>Rollover Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>