force-app/main/default/objects/Lottery_Application__c/fields/Streak_Start_Year__c.field-meta.xml
<CustomField>
    <fullName>Streak_Start_Year__c</fullName>
    <label>Streak Start Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>