force-app/main/default/objects/Lottery_Application__c/validationRules/Denied_Status_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Denied_Status_Reason</fullName>
    <active>true</active>
    <description>Status Reason is required when Request Status is Denied</description>
    <errorConditionFormula>TEXT( Request_Status__c ) = &quot;Denied&quot; &amp;&amp;
ISBLANK( Status_Reason__c )</errorConditionFormula>
    <errorMessage>Status Reason is required when Request Status is Denied</errorMessage>
</ValidationRule>