force-app/main/default/objects/Lottery_Application__c/validationRules/Request_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Request_Notes</fullName>
    <active>true</active>
    <description>Request Notes are required for Application Level Change requests</description>
    <errorConditionFormula>OR(NOT(ISBLANK(TEXT( Requested_Level__c ))) &amp;&amp; ISBLANK( Request_Notes__c ),
NOT(ISBLANK(TEXT(  Request_Reason__c ))) &amp;&amp; ISBLANK( Request_Notes__c ))</errorConditionFormula>
    <errorMessage>Request Notes are required for Application Level Change requests</errorMessage>
</ValidationRule>